Ensures saving spinner visible
Was hidden behind drop down button on selects.

--- a/prebuilt_forms/css/ukbms_sectioned_transects_input_sample.css
+++ b/prebuilt_forms/css/ukbms_sectioned_transects_input_sample.css
@@ -54,3 +54,6 @@ input.saving[type="text"], input.saving[type="password"], select.saving {
   background: url(../../../media/images/ajax-loader.gif) no-repeat right;
   font-style: italic;
 }
+select.saving {
+  background-position: right 16px center;
+}
